--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nibin_portfolio",
-  "homepage": "",
+  "homepage": "https://nibinpsreenivas.github.io/Portfolio-Website-Using-React
+",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
