--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nibin_portfolio",
-  "homepage": "https://nibinpsreenivas.github.io/Portfolio-Website-Using-React
-",
+  "homepage": "https://nibinpsreenivas.github.io/Portfolio-Website-Using-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
